<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#d2d4d6"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/tv_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:text="@string/score_text"
        android:textColor="#393f40"
        android:textSize="28sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_hold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/hold_text"
        android:textColor="#393f40"
        android:textSize="24sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/iv_picture"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/picture_description"
        android:scaleType="fitCenter" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp">

        <Button
            android:id="@+id/b_climb"
            android:layout_width="120dp"
            android:layout_height="60dp"
            android:layout_alignParentStart="true"
            android:layout_marginStart="10dp"
            android:background="@drawable/custom_button"
            android:backgroundTint="#B06100"
            android:gravity="center"
            android:text="@string/climb_button_text"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/b_fall"
            android:layout_width="120dp"
            android:layout_height="60dp"
            android:layout_centerInParent="true"
            android:background="@drawable/custom_button"
            android:backgroundTint="#393f40"
            android:gravity="center"
            android:text="@string/fall_button_text"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/b_reset"
            android:layout_width="120dp"
            android:layout_height="60dp"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="12dp"
            android:background="@drawable/custom_button"
            android:backgroundTint="#B06100"
            android:gravity="center"
            android:text="@string/reset_button_text"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <Button
        android:id="@+id/b_change_language"
        android:layout_width="298dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginTop="32dp"
        android:background="@drawable/custom_button"
        android:backgroundTint="#393f40"
        android:gravity="center"
        android:text="@string/change_language"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold" />

</LinearLayout>
